# t-rs

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  flake.nix
src/: cli.rs  config.rs  domain.rs  main.rs  toggl.rs  types.rs
