[package]
name = "t-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.22", features = ['serde'] }
clap = "4.0.19"
dialoguer = { version = "0.10.2", features =["fuzzy-select"] }
reqwest = { version = "0.11.12", features = ["blocking"] }
serde = { version = "*", features = ["derive"] }
serde_jsonrc = "0.1.0"
